crates/fossil-codegen/tests/snapshots/codegen_sink_descriptor__two_shape_sink_sql.snap
---
source: crates/fossil-codegen/tests/codegen_sink_descriptor.rs
assertion_line: 253
expression: sql
---
CREATE VIEW people AS
SELECT * FROM read_csv_auto('people.csv', sample_size=-1);
COPY (
    SELECT * EXCLUDE (_rn) FROM (
SELECT *, row_number() OVER (ORDER BY iri) AS _rn FROM (SELECT DISTINCT ON (iri) iri AS id, legalName FROM (SELECT 'http://example.org/' || people.id AS iri, people.name AS name, people.friend AS knows FROM people) AS base ORDER BY iri) AS _src
    ) AS _chunked
    WHERE _rn BETWEEN 1 AND 1024
) TO 'vertex/company/chunk0.parquet' (FORMAT PARQUET);
COPY (
    SELECT * EXCLUDE (_rn) FROM (
SELECT *, row_number() OVER (ORDER BY iri) AS _rn FROM (SELECT DISTINCT ON (iri) iri AS id, name FROM (SELECT 'http://example.org/' || people.id AS iri, people.name AS name, people.friend AS knows FROM people) AS base ORDER BY iri) AS _src
    ) AS _chunked
    WHERE _rn BETWEEN 1 AND 1024
) TO 'vertex/person/chunk0.parquet' (FORMAT PARQUET);
COPY (
    SELECT * EXCLUDE (_rn) FROM (
SELECT *, row_number() OVER (ORDER BY src_id) AS _rn FROM (SELECT iri AS src_id, knows AS dst_id FROM (SELECT 'http://example.org/' || people.id AS iri, people.name AS name, people.friend AS knows FROM people) AS base ORDER BY src_id, dst_id) AS _src
    ) AS _chunked
    WHERE _rn BETWEEN 1 AND 1024
) TO 'edge/person_knows_person/chunk0.parquet' (FORMAT PARQUET);
